# raytracing-in-C

./: 3Dobject.c  3Dobject.h  CMakeLists.txt  README.md  canvas.c  canvas.h  clock_image.c  color.h  float.h  light.h  material.h  matrix.c  matrix.h  projectile.c  ray.h  sphere.c  sphere.h  sphere_image.c  transform.h  tuple.h  util.h  world.h
test/: canvas_test.h  color_test.h  light_test.h  material_test.h  matrix_test.h  ray_test.h  sphere_test.h  tests.c  tests.h  transform_test.h  tuple_test.h  world_test.h
